# aegis-api-gateway

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-commit-message-instructions.md
.github/workflows/: ci.yml
docs/adr/: 0001-graphql-edge-rest-internal.md
src/aegis/: config.py  logging.py  main.py
src/aegis/adapters/: auth.py  graphql.py  upstream.py
src/aegis_api_gateway/: __init__.py  config.py  logging.py
tests/unit/: test_auth.py  test_dataloader.py
upstreams/: mock_service.py
