[project]
name = "aegis-api-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harshdeep Kanhai", email = "harshdeepkanhai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
    "strawberry-graphql>=0.316.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
aegis-api-gateway = "aegis_api_gateway:main"

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "testcontainers>=4.14.2",
]
